// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component renders Badge with variant = PRIMARY 1`] = `
.c0 {
  font-size: 0.7rem;
  padding: 0.3rem 0.6rem;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.375rem;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  background: #43cea2;
  color: #c4cfde;
}

<span
  className="c0"
>
  Hello
</span>
`;

exports[`Badge Component renders Badge with variant = SECONDARY 1`] = `
.c0 {
  font-size: 0.7rem;
  padding: 0.3rem 0.6rem;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.375rem;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  background: #43cea2;
  color: #c4cfde;
}

<span
  className="c0"
>
  Hello
</span>
`;

exports[`Badge Component renders Badge with variant = SUCCESS 1`] = `
.c0 {
  font-size: 0.7rem;
  padding: 0.3rem 0.6rem;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.375rem;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  background: green;
  color: #c4cfde;
}

<span
  className="c0"
>
  Hello
</span>
`;

exports[`Badge Component renders Badge with variant = WARNING 1`] = `
.c0 {
  font-size: 0.7rem;
  padding: 0.3rem 0.6rem;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.375rem;
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  background: yellow;
  color: #c4cfde;
}

<span
  className="c0"
>
  Hello
</span>
`;
